# voice

./: .gitignore  README.md  assistant.py  constants.py  deps.txt  m.py  main.py  main.spec  notes  numwrd.py  package-lock.json  package.json  pyproject.toml  qa_net.py  requirements.txt  str2time.py  test.py  train_nlu  utils.py  wav2vec.py  wav2vec_eval.py  wav2vec_train.py
core/: assistant.py  constants.py  db.py  decorators.py  logger.py  loops.py  nlu2json.py  notifications.py  numwrd.py  singletons.py  skills.py  str2time.py  strtime.py  utils.py
core/events/: __init__.py  event_emitter.py  thread.py  thread_emitter.py
core/neural/: datasets.py  engines.py  inference.py  model.py  train.py  utils.py
core/node/: proxy.js
core/rasa/: config.yml  domain.yml
core/threads/: __init__.py  collect_input.py  fft.py  scheduled_event.py  server.py  speech_recognition.py  timer.py  tts.py  voice.py
events/: __init__.py  thread_emitter.py
experiments/: pipe.py  resp.py  stt_test.py  t.js  t_server.py
experiments/conversation/: load.py
node/: proxy.js
rasa/: nlu.yml
skill_dev/: skill_arithmetic.py  skill_schedule.py  skill_search.py  skill_spotify.py  skill_time.py  skill_window.py
skills/: __init__.py  skill_applications.py  skill_arithmetic.py  skill_schedule.py  skill_search.py  skill_speech.py  skill_spotify.py  skill_time.py  skill_window.py
sp_asr/: asr.py  dataset.py
threads/: collect_input.py  say_text.py  scheduled_event.py  server.py  speech_recognition.py  timer.py  tts.py  voice.py
ui/: main_window.py  text.py  visualizer.py  webview.py
(+52 files in other folders)
