[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "a voice assistant"
authors = ["Tare Ebelo <75279482+TareHimself@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
wxPython = "^4.2.0"
vosk = "^0.3.44"
torch = "^1.12.1"
sounddevice = "^0.4.5"
notify-py = "^0.3.3"
PyAutoGUI = "^0.9.53"
pyperclip = "^1.8.2"
word2number = "^1.1"
num2words = "^0.5.12"
aiohttp = "^3.8.3"
scipy = "^1.9.1"
pytz = "^2022.4"
PyYAML = "^6.0"
transformers = "^4.22.2"
samplerate = "^0.1.0"
PyAudio = "^0.2.12"
librosa = "^0.9.2"
pythonnet = "3.0.0a2"
clr-loader = "0.1.7"
pywebview = "^3.6.3"
tkinterweb = "^3.15.6"
discord-py = "^2.0.1"
voice = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
